# ButterflyMX

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
butterflymx/: __init__.py  butterflymx.py  request_client.py  utils.py
butterflymx/graphql/: __init__.py  query_builder.py
butterflymx/models/: __init__.py  butterflymx.py  login.py
tests/test_graphql/: test_query_builder.py
