[tool.poetry]
name = "butterflymx"
version = "0.1.1"
description = "A reverse-engineered ButterflyMX app API wrapper"
authors = ["Milo Weinberg <iapetus011@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Iapetus-11/ButterflyMX"
keywords = ["butterflymx", "butterflymx-api", "butterflymx-graphql"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
beautifulsoup4 = "^4.12.2"
ruff = "^0.0.265"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
types-beautifulsoup4 = "^4.12.0.4"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["butterflymx/**/*.py"]
python_version = "3.10"
warn_unused_configs = true
namespace_packages = true
explicit_package_bases = true

[tool.ruff]
line-length = 100
